--- a/regform1_577.html
+++ b/regform1_577.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Registration Page ____ 23261A0577</title>
+<title>Registration Page 23261A0577</title>
 <style>
   body {
     background-color: yellow;
